Fix map page sytling to keep footer visible and fix map dimensions

--- a/static/css/popup.css
+++ b/static/css/popup.css
@@ -1,3 +1,8 @@
+.mapboxgl-map {
+    width: 100%;
+    height: 100vh;
+}
+
 .excerpt-textbox {
     background-color: #efe9e1;
     padding: 10px;
